[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Materials/OBJ format/blasterD.obj" type="ArrayMesh" id=2]
[ext_resource path="res://PixelPerfectionSkybox6.png" type="Texture" id=3]
[ext_resource path="res://MachineGun/Gun.gd" type="Script" id=4]
[ext_resource path="res://MachineGun/bullet.tscn" type="PackedScene" id=5]

[sub_resource type="CylinderShape" id=1]
radius = 0.499802
height = 0.855725

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 1.8

[sub_resource type="CapsuleShape" id=3]
radius = 0.5
height = 1.8

[sub_resource type="PanoramaSky" id=4]
panorama = ExtResource( 3 )

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )

[sub_resource type="PanoramaSky" id=6]
panorama = ExtResource( 3 )

[sub_resource type="Environment" id=7]
background_mode = 2
background_sky = SubResource( 6 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.836383, 0 )
shape = SubResource( 1 )

[node name="Visible body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Shape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )

[node name="Camera" type="Camera" parent="Head"]
cull_mask = 1048573
environment = SubResource( 5 )
current = true
fov = 100.0
far = 5000.0

[node name="ViewportContainer" type="ViewportContainer" parent="Head/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Head/Camera/ViewportContainer"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="GunCam" type="Camera" parent="Head/Camera/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )
cull_mask = 2
environment = SubResource( 7 )

[node name="muzzles" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0 )

[node name="muzzle" type="Spatial" parent="Head/Camera/muzzles"]
transform = Transform( 0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, 0.0156187, 0.8, -1.111 )
script = ExtResource( 4 )
autofire = false
listem_to_input = true
fire_action_name = "primary"
bullet_res = ExtResource( 5 )
muzzle_velocity = 80.0
fire_rate = 2.5

[node name="muzzle2" type="Spatial" parent="Head/Camera/muzzles"]
transform = Transform( 0.994522, 0, 0.104528, 0, 1, 0, -0.104528, 0, 0.994522, -0.016, 0.8, -1.111 )
script = ExtResource( 4 )
autofire = false
listem_to_input = true
fire_action_name = "primary"
bullet_res = ExtResource( 5 )
muzzle_velocity = 80.0
fire_rate = 2.5

[node name="muzzle3" type="Spatial" parent="Head/Camera/muzzles"]
transform = Transform( 1, 0, 0, 0, 0.994522, 0.104528, 0, -0.104528, 0.994522, 0, 0.784, -1.111 )
script = ExtResource( 4 )
autofire = false
listem_to_input = true
fire_action_name = "primary"
bullet_res = ExtResource( 5 )
muzzle_velocity = 80.0
fire_rate = 2.5

[node name="muzzle4" type="Spatial" parent="Head/Camera/muzzles"]
transform = Transform( 1, 0, 0, 0, 0.994522, -0.104528, 0, 0.104528, 0.994522, 0, 0.816, -1.111 )
script = ExtResource( 4 )
autofire = false
listem_to_input = true
fire_action_name = "primary"
bullet_res = ExtResource( 5 )
muzzle_velocity = 80.0
fire_rate = 2.5

[node name="muzzle5" type="Spatial" parent="Head/Camera/muzzles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -1.111 )
script = ExtResource( 4 )
autofire = false
listem_to_input = true
fire_action_name = "primary"
bullet_res = ExtResource( 5 )
muzzle_velocity = 80.0
fire_rate = 2.5

[node name="HandLoc" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 1, 0, -0.379, -0.744 )

[node name="Hand" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 1, 0, -0.37902, -0.744492 )

[node name="blasterA" type="MeshInstance" parent="Head/Hand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, -2.98023e-08, 1, 0, 0, 0 )
layers = 2
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null

[node name="side2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.48, 0, 0 )
enabled = true
cast_to = Vector3( 0.25, 0, 0 )

[node name="side1" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.49, 0, 0 )
enabled = true
cast_to = Vector3( -0.25, 0, 0 )
